--- a/css/master.css
+++ b/css/master.css
@@ -152,6 +152,28 @@ figcaption {
   list-style-image: url(../imagenes/instagram.png);
   list-style-position: inside;
 }
+.bloqueImagenes {
+  width: 33.33%;
+  text-align: center;
+  background-color: #d5c75f;
+}
+.bloqueImagenes figure img{
+  max-width: 260px;
+  margin: 10px;
+}
+.efectoBlur {
+  filter: blur(10px);
+  -webkit-filter: blur(10px);
+}
+.efectoEscalaGrises {
+  filter: sepia(90%);
+  -webkit-filter: sepia(90%);
+}
+.efectoSepia {
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
+}
+
 @-webkit-keyframes slidein{
   0%{
     margin-top: 150%;
@@ -196,6 +218,10 @@ figcaption {
   }
   .piePagina {
     width: 50%;
+  }
+  .bloqueImagenes figure img{
+    max-width: 230px;
+    margin: 10px;
   }
 }
 @media all and (min-width: 481px) and (max-width: 720px){
@@ -249,6 +275,13 @@ figcaption {
   .piePagina {
     width: 50%;
   }
+  .bloqueImagenes {
+    width: 50%;
+  }
+  .bloqueImagenes figure img{
+    max-width: 200px;
+    margin: 10px;
+  }
 }
 @media all and (max-width: 480px){
   .contenedor {
@@ -291,6 +324,13 @@ figcaption {
   }
   .piePagina {
     width: 100%;
+  }
+  .bloqueImagenes {
+    width: 100%;
+  }
+  .bloqueImagenes figure img{
+    max-width: 280px;
+    margin: 20px;
   }
   img {
     width: 100%;
